--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -17,4 +17,17 @@ body {
       f.getColor("background", 800)
    );
    background-attachment: fixed;
+   .container {
+      max-width: 1024px;
+      margin: auto;
+      padding: 2em;
+      box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px,
+         rgba(0, 0, 0, 0.3) 0px 7px 13px -3px,
+         rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+   }
+   .center {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+   }
 }
