Add edit and remove actions

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -18,7 +18,7 @@ body {
    );
    background-attachment: fixed;
    .container {
-      max-width: 1024px;
+      max-width: 550px;
       margin: auto;
       padding: 2em;
       box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px,
@@ -29,5 +29,52 @@ body {
       display: flex;
       justify-content: center;
       align-items: center;
+   }
+   .react-confirm-alert {
+      &-body {
+         font: inherit;
+         color: f.getColor("white", 200);
+         background: f.getColor("black", 600);
+         box-shadow: 0 5px 6px rgba(144, 144, 144, 0.16),
+            0 5px 16px rgba(155, 155, 155, 0.13);
+         padding: 1.3em;
+         margin: 1em;
+         width: fit-content;
+      }
+      &-overlay {
+         background-color: rgba(31, 31, 31, 0.8);
+      }
+      &-button-group {
+         margin-top: 2em;
+         justify-content: flex-end;
+         button {
+            font: inherit;
+            background-image: linear-gradient(
+               205deg,
+               f.getColor("violet", 400),
+               f.getColor("pink", 400)
+            );
+            cursor: pointer;
+            user-select: none;
+            border-bottom-left-radius: initial;
+            background-size: 200%;
+            box-shadow: 0px 4px 8px 0 f.getColor("pink", 200, 0.3);
+            transition: transform cubic-bezier(0.075, 0.82, 0.165, 1) 0.2s,
+               box-shadow ease-in-out 0.1s, background-position ease 0.5s,
+               filter cubic-bezier(0.46, 0.54, 0.84, 1.27) 500ms;
+            &:hover,
+            &:focus,
+            &:focus-visible {
+               text-decoration: none;
+               outline: none;
+               background-position: right;
+               filter: hue-rotate(-80deg);
+            }
+            &:active {
+               transform: translateY(4px);
+               box-shadow: 0 2px 4px f.getColor("pink", 400, 0.5);
+            }
+         }
+      }
    }
 }
