--- a/src/components/molecules/Modal/index.scss
+++ b/src/components/molecules/Modal/index.scss
@@ -38,6 +38,7 @@
 
 .modal-content {
    transform: translateY(-50vh);
+   overflow: auto;
    transition: all 150ms cubic-bezier(0.4, 0, 0.2, 1);
    opacity: 0;
    display: flex;
@@ -45,12 +46,12 @@
    justify-content: center;
    align-items: stretch;
    position: relative;
-   padding: 1.5em;
+   padding: 1em;
    box-sizing: border-box;
    min-height: 50px;
    min-width: 50px;
-   max-height: 80%;
-   max-width: 80%;
+   max-height: 85%;
+   max-width: 85%;
    box-shadow: 0 5px 6px rgba(144, 144, 144, 0.16),
       0 5px 16px rgba(155, 155, 155, 0.13);
    background-color: f.getColor("black", 400);
